# ns3-mmwave-millicar

./: CITATION.cff  CMakeLists.txt  README.md  buildings.txt  elephant-flow-animation.xml
contrib/: .gitignore  CMakeLists.txt
contrib/millicar/: CMakeLists.txt
contrib/millicar/examples/: CMakeLists.txt  vehicular-5g-16.cc  vehicular-5g-24.cc  vehicular-5g-48.cc  vehicular-5g-64.cc  vehicular-5g-8-simple.cc  vehicular-5g-8.cc  vehicular-5g-few-users copy.cc  vehicular-5g-few-users.cc  vehicular-5g-multi-groups.cc  vehicular-5g-multi-groups_mobility.cc  vehicular-5g-single-group.cc  vehicular-5g.cc  vehicular-simple-four.cc  vehicular-simple-one.cc  vehicular-simple-three.cc  vehicular-simple-two.cc
contrib/millicar/examples/backup/: vehicular-5g-24 copy.cc  vehicular-5g-48 copy.cc  vehicular-5g-64 copy.cc
contrib/millicar/helper/: mmwave-vehicular-5g-helper.cc  mmwave-vehicular-5g-helper.h  mmwave-vehicular-helper.cc  mmwave-vehicular-indication-message-helper.cc  mmwave-vehicular-indication-message-helper.h  mmwave-vehicular-traces-helper.cc  mmwave-vehicular-traces-helper.h  parameters-config.cc  parameters-config.h
contrib/millicar/helper/stats-helper/: decentralized-relay-stats.cc  decentralized-relay-stats.h  ef-mac-rlc-buffer-status.cc  ef-mac-rlc-buffer-status.h  ef-scheduling-stats.cc  ef-scheduling-stats.h  relay-latency-stats.cc  relay-latency-stats.h  send-packet-stats.cc  send-packet-stats.h  sinr-report-stats.cc  sinr-report-stats.h  stats-helper.cc  stats-helper.h
contrib/millicar/model/: channel-condition-model-deterministic.cc  channel-condition-model-deterministic.h  mmwave-packet-relay-header.cc  mmwave-packet-relay-header.h  mmwave-packet-relay-tag.cc  mmwave-packet-relay-tag.h  mmwave-sidelink-mac.cc  mmwave-sidelink-mac.h  mmwave-sidelink-phy.cc  mmwave-sidelink-phy.h  mmwave-sidelink-sap.h  mmwave-sidelink-spectrum-phy.cc  mmwave-sidelink-spectrum-phy.h  mmwave-sidelink-spectrum-signal-parameters.h  mmwave-vehicular-5g-net-device.cc  mmwave-vehicular-5g-net-device.h  mmwave-vehicular-net-device.cc  node-v2v-channel-condition-model.cc  node-v2v-channel-condition-model.h  three-gpp-v2v-blockage-channel-condition-model.cc  three-gpp-v2v-blockage-channel-condition-model.h
contrib/oran-interface/: CMakeLists.txt
contrib/oran-interface/doc/: oran-interface.rst
contrib/oran-interface/examples/: CMakeLists.txt  ric-control-message.cc
contrib/oran-interface/helper/: handover-control-message.h  indication-message-helper.cc  lte-indication-message-helper.cc  lte-indication-message-helper.h  mmwave-indication-message-helper.cc  mmwave-indication-message-helper.h
contrib/oran-interface/model/: asn1c-types.cc  asn1c-types.h  kpm-indication.cc  kpm-indication.h  oran-interface.cc  ric-control-message.cc  ric-control-message.h
contrib/oran-interface/model/handover_ric_control/: CMakeLists.txt  all_handovers.cc  all_handovers.h  all_handovers_plmn.cc  all_handovers_plmn.h  cell_handovers_list.cc  cell_handovers_list.h  control_message_encoder_decoder.cc  control_message_encoder_decoder.h  handover_item.cc  handover_item.h  handover_list.cc  handover_list.h
scratch/: scenario-zero.cc
src/: CMakeLists.txt
src/applications/: CMakeLists.txt
src/applications/model/: udp-client.cc  udp-client.h  video-stream-client.cc  video-stream-server.cc  video-stream-server.h
src/buildings/: CMakeLists.txt
src/buildings/model/: three-gpp-v2v-channel-condition-model.cc
src/lte/: CMakeLists.txt
src/lte/helper/: mmwave-bearer-stats-calculator.cc  mmwave-bearer-stats-calculator.h
src/lte/model/: lte-enb-net-device-oran.cc  lte-enb-net-device-oran.h  lte-enb-rrc.cc  lte-enb-rrc.h  lte-rlc-tm.cc  lte-rlc-um.cc  lte-rlc.cc  lte-rlc.h  lte-rrc-header.cc  lte-rrc-header.h  lte-rrc-protocol-ideal.cc  lte-rrc-protocol-ideal.h  lte-rrc-protocol-real.cc  lte-rrc-protocol-real.h  lte-rrc-sap.h  lte-ue-rrc.cc  lte-ue-rrc.h
src/mmwave/: CMakeLists.txt
src/mmwave/examples/: CMakeLists.txt  mc-twoenbs.cc  ric-control-message.cc
src/mmwave/helper/: mmwave-bearer-stats-connector.cc  mmwave-bearer-stats-connector.h  mmwave-helper.h
src/mmwave/model/: mmwave-component-carrier-enb.cc  mmwave-control-messages.cc  mmwave-control-messages.h  mmwave-enb-net-device.cc  mmwave-enb-net-device.h  mmwave-enb-phy.cc  mmwave-lte-rrc-protocol-real.cc  mmwave-lte-rrc-protocol-real.h  mmwave-net-device.cc  mmwave-rrc-protocol-ideal.cc  mmwave-rrc-protocol-ideal.h  mmwave-ue-net-device.cc
src/propagation/model/: three-gpp-propagation-loss-model.cc  three-gpp-v2v-propagation-loss-model.cc
src/spectrum/model/: three-gpp-spectrum-propagation-loss-model.cc
